[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.0"
prost = "0.9"
tonic = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = {version = "0.1.5", features = ["net"]}

[dev-dependencies]
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }

[build-dependencies]
tonic-build = "0.6"